data/derived/fa15/progs/unify/prog4155.ml.out
Characters 373-374:
  | Zero -> 0;;
            ^
Error: This expression has type int but an expression was expected of type
         float
